# cicada

./: .gitignore  AUTHORS  BUILD.rst  COMPILE.rst  FAQ  INSTALL  LICENSE  LICENSE.rst  LICENSES.rst  Makefile.am  NEWS  NEWS.rst  README  README.alignment  README.attributes  README.eval  README.extract  README.features  README.grammar  README.hypergraph  README.input  README.lattice  README.learn  README.ling  README.md  README.mpi  README.non-terminals  README.operation  README.parameter  README.pyp  README.requirements  README.rst  README.theory  README.tree-grammar  TODO  TODO.md  TODO.rst  autogen.sh  configure.ac
cg_descent/: .gitignore  Makefile.am  README  README.cicada  cg.h  cg.hpp  cg_blas.h  cg_descent.c  cg_descent.h  cg_user.h  driver1.c  driver2.c  driver3.c  driver4.c  driver5.c
cicada/: .gitignore  .gitignore-orig  Makefile.am  alignment.cpp  alignment.hpp  alignment_main.cpp  apply.hpp  apply_cube_coarse.hpp  apply_cube_grow.hpp  apply_cube_grow_coarse.hpp  apply_cube_prune.hpp  apply_cube_prune_diverse.hpp  apply_cube_prune_rejection.hpp  apply_exact.hpp  apply_incremental.hpp  apply_state_less.hpp  attribute.cpp  attribute.hpp  attribute_vector.cpp  attribute_vector.hpp  attribute_vector_codec.hpp  attribute_vector_main.cpp  binarize.hpp  binarize_all.hpp  binarize_base.hpp  binarize_cyk.hpp  binarize_dependency.hpp  binarize_dependency_all.hpp  binarize_left.hpp  binarize_right.hpp  binarize_terminal.hpp  bitext.hpp  bitree_rnn.cpp  bitree_rnn.hpp  cluster.cpp  cluster.hpp  cluster_main.cpp  cluster_stemmer.hpp  compact_func.hpp  compose.hpp  (+239 more)
codec/: .gitignore  Makefile.am  codec_impl.hpp  fastlz.hpp  fastlz_codec.cpp  fastlz_compress_main.cpp  fastlz_decompress_main.cpp  lz4.hpp  lz4_codec.cpp  lz4_compress_main.cpp  lz4_decompress_main.cpp  quicklz.hpp  quicklz_codec.cpp  quicklz_compress_main.cpp  quicklz_decompress_main.cpp  snappy.hpp  snappy_codec.cpp  snappy_compress_main.cpp  snappy_decompress_main.cpp
doc/: Makefile.am  alignment.rst  cicada-alignment.py.rst  cicada-extract.py.rst  cicada.1  cicada.rst  cicada_filter_alignment.rst  cicada_filter_bitext.rst  cicada_filter_chardet.rst  cicada_filter_charniak.rst  cicada_filter_config.rst  cicada_filter_config_moses.rst  cicada_filter_dependency.rst  cicada_mpi.rst  eval.rst  extract.rst  features.rst  grammar.md  grammar.rst  help2rst.py  highlight.css  hypergraph.rst  indexing.rst  lattice.md  lattice.rst  learning.rst  linguistic.rst  non-terminals.rst  operation.rst  option.rst  parallel.rst  parsing.rst  pyp.rst  style.css  training-stsg.rst  training.rst  tree-grammar.rst
liblbfgs/: .gitignore  Makefile.am  lbfgs.hpp  lbfgs_error.hpp  lbfgs_fortran.c  lbfgs_fortran.h  lbfgsb_fortran.c
liblinear/: .gitignore  Makefile.am  README.cicada  linear.cpp  linear.h  predict.cpp  train.cpp  tron.cpp  tron.h
libstemmer_c/: .gitignore  Makefile.am
man/: Makefile.am  cicada-alignment.py.rst  cicada-extract.py.rst  cicada-index.py.rst  cicada-learn-online.py.rst  cicada-learn.py.rst  cicada-mert.py.rst  cicada.rst  cicada_alignment.rst  cicada_alignment_hmm.rst  cicada_alignment_model1.rst  cicada_alignment_model4.rst  cicada_filter_alignment.rst  cicada_filter_parseforest.rst  cicada_filter_penntreebank.rst  cicada_learn.rst  cicada_learn_kbest.rst  cicada_learn_kbest_mpi.rst  cicada_learn_mpi.rst  cicada_mpi.rst  cicada_oracle.rst  cicada_oracle_kbest.rst  cicada_oracle_kbest_mpi.rst  cicada_oracle_mpi.rst
progs/: .gitignore  Makefile.am  cicada.cpp  cicada_alignment.cpp  cicada_alignment_hmm.cpp  cicada_alignment_hmm_impl.hpp  cicada_alignment_impl.hpp  cicada_alignment_itg_impl.hpp  cicada_alignment_maximize_impl.hpp  cicada_alignment_maxmatch_impl.hpp  cicada_alignment_model1.cpp  cicada_alignment_model1_impl.hpp  cicada_alignment_model4.cpp  cicada_alignment_model4_impl.hpp  cicada_autoencode_itg.cpp  cicada_autoencode_itg_impl.hpp  cicada_autoencode_itg_mpi.cpp  cicada_autoencode_lexicon.cpp  cicada_autoencode_ngram.cpp  cicada_clean.cpp  cicada_cluster_word.cpp  cicada_convex_hull.cpp  cicada_convex_hull_kbest.cpp  cicada_convex_hull_kbest_mpi.cpp  cicada_convex_hull_mpi.cpp  cicada_decoder.cpp  cicada_decoder_mpi.cpp  cicada_eval.cpp  cicada_extract_ghkm.cpp  cicada_extract_ghkm_impl.hpp  cicada_extract_ghkm_mpi.cpp  cicada_extract_impl.hpp  cicada_extract_phrase.cpp  cicada_extract_phrase_impl.hpp  cicada_extract_phrase_mpi.cpp  cicada_extract_rule.cpp  cicada_extract_scfg.cpp  cicada_extract_scfg_impl.hpp  cicada_extract_scfg_mpi.cpp  cicada_extract_score.cpp  (+193 more)
samples/: Makefile.am  cicada-linear.sh  cicada-mert.sh  cicada.config.hiero  cicada.config.hiero-mbr  cicada.config.string-to-tree  cicada.config.tree-to-string  dates_en.txt  dates_zh_CN.txt  mert.sh  numbers.en.txt  numbers.ja.txt  numbers.zh.txt  rule.zone-wall  weights.mbr
scripts/: Makefile.am  cicada-alignment.py  cicada-config.py  cicada-extract.py  cicada-filter-fallback-rule.py  cicada-filter-non-terminal.py  cicada-filter-penntreebank.py  cicada-index.py  cicada-learn-linear.sh  cicada-learn-moses.py  cicada-learn-moses.sh  cicada-learn-online.py  cicada-learn.py  cicada-learn.sh  cicada-linear.sh  cicada-maxent.py  cicada-maxent.sh  cicada-mert-moses.py  cicada-mert-moses.sh  cicada-mert.py  cicada-mert.sh  cicada-moses.sh  cicada-pipe.py  cicada-qsub.sh  cicada-sh.py  extract.py  qsub-wrapper.sh
sgml_entity/: Makefile.am  uspatent.txt
stx/: Makefile.am
succinct_db/: .gitignore  Makefile.am  sample_succinct_hash.cpp  sample_succinct_trie.cpp  sample_succinct_trie_database.cpp  sample_succinct_trie_db.cpp  succinct_db.hpp  succinct_hash.hpp  succinct_hash_db.hpp  succinct_hash_main.cpp  succinct_trie.hpp  succinct_trie_database.hpp  succinct_trie_database_main.cpp  succinct_trie_db.hpp  succinct_trie_db_main.cpp  succinct_trie_main.cpp
utils/: .gitignore  Makefile.am  aligned_allocator.hpp  alloc_vector.hpp  alloc_vector_main.cpp  allocinfo_allocator.hpp  arc_list.hpp  array_power2.hpp  async_device.hpp  atomicop.hpp  b_heap.hpp  b_heap_main.cpp  base64.hpp  base64_main.cpp  bichart.hpp  bichart_main.cpp  (+258 more)
(+726 files in other folders)
