
ACLOCAL_AMFLAGS = -I config

SUBDIRS = utils succinct_db libstemmer_c wn cicada progs scripts

EXTRA_DIST = \
README \
README.alignment \
README.attributes \
README.eval \
README.extract \
README.features \
README.grammar \
README.hypergraph \
README.input \
README.lattice \
README.learn \
README.ling \
README.mpi \
README.operation \
README.parameter \
README.requirements \
README.theory \
README.tree-grammar
