
ACLOCAL_AMFLAGS = -I config

SUBDIRS = sgml_entity utils codec succinct_db libstemmer_c wn liblinear liblbfgs cg_descent eigen kenlm cicada progs scripts man doc samples

AUTOMAKE_OPTIONS = foreign subdir-objects

EXTRA_DIST = \
BUILD.rst \
COPYING.GPL \
COPYING.LGPL \
FAQ \
LICENSE \
NEWS.rst \
README.rst \
TODO.rst \
.gitignore

